@@ -449,7 +449,6 @@ IF( ENABLE_KDE_SUPPORT )
         TARGET_LINK_LIBRARIES(cantata ${KDE4_KFILE_LIBS})
     endif (NOT WIN32 AND TAGLIB_FOUND AND ENABLE_REMOTE_DEVICES)
     install( TARGETS cantata ${INSTALL_TARGETS_DEFAULT_ARGS} )
-    install( PROGRAMS dynamic/cantata-dynamic DESTINATION bin)
     install( FILES cantataui.rc DESTINATION ${DATA_INSTALL_DIR}/cantata )
     install( FILES cantata.notifyrc DESTINATION ${DATA_INSTALL_DIR}/cantata )
 ELSE( ENABLE_KDE_SUPPORT )
@@ -480,7 +479,6 @@ ELSE( ENABLE_KDE_SUPPORT )
         ADD_EXECUTABLE( cantata WIN32 ${CANTATA_SRCS} ${CANTATA_MOC_SRCS} ${CANTATA_RC_SRCS} ${CANTATA_UI_HDRS} ${CANTATA_PO})
     else (WIN32)
         ADD_EXECUTABLE( cantata ${CANTATA_SRCS} ${CANTATA_MOC_SRCS} ${CANTATA_RC_SRCS} ${CANTATA_UI_HDRS})
-        install( PROGRAMS dynamic/cantata-dynamic DESTINATION bin)
         TARGET_LINK_LIBRARIES(cantata X11)
     endif (WIN32)
 
@@ -494,6 +492,10 @@ ELSE( ENABLE_KDE_SUPPORT )
         include_directories(${CMAKE_BINARY_DIR}/qtsingleapplication)
     endif (WIN32)
 ENDIF( ENABLE_KDE_SUPPORT )
+
+if (NOT WIN32)
+    install( PROGRAMS dynamic/cantata-dynamic DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cantata/)
+endif (NOT WIN32)
 
 add_subdirectory(qtiocompressor)
 TARGET_LINK_LIBRARIES(cantata qtiocompressor)
